# bitTorrent-client

./: CMakeLists.txt  README.md  bencode.c  bencode.h  bittorrent  main.c
src/: CMakeLists.txt  bencode.c  bencode.h  decode.c  decode.h  info.c  info.h  main.c  peer.c  peer.h  sha1.c  sha1.h  tracker.c  tracker.h
src/sha1/: sha1.c
